--- a/LuaCutscenes/Ahorn/lang/en_gb.lang
+++ b/LuaCutscenes/Ahorn/lang/en_gb.lang
@@ -7,9 +7,12 @@
 # Lua Cutscene
 placements.entities.luaCutscenes/luaTalker.tooltips.onlyOnce=If the talker should be deactivated after activation. Entering the room again or dying reactivates the talker.
 placements.entities.luaCutscenes/luaTalker.tooltips.filename=Cutscene file to load relative to mod folder. File extension is not included.
+placements.triggers.luaCutscenes/luaTalker.tooltips.arguments=Extra arguments passed to the cutscene. Available as `arguments` in code. Attempts to evaluate to Lua code if possible.
+
 
 # -- Triggers --
 
 # Lua Cutscene
 placements.triggers.luaCutscenes/luaCutsceneTrigger.tooltips.onlyOnce=If the trigger should only trigger once per room load. This means it can trigger again after death or transitioning into the room again.
 placements.triggers.luaCutscenes/luaCutsceneTrigger.tooltips.filename=Cutscene file to load relative to mod folder. File extension is not included.
+placements.triggers.luaCutscenes/luaCutsceneTrigger.tooltips.arguments=Extra arguments passed to the cutscene. Available as `arguments` in code. Attempts to evaluate to Lua code if possible.
